# sr-teleop

./: .bzrignore  README.md  changelog.tex  project.rosinstall  repository.rosinstall  stack.xml
cyberglove/: CMakeLists.txt  README.md  cyberglove.launch  manifest.xml  package.xml
cyberglove/include/cyberglove/: cyberglove_publisher.h  serial_glove.hpp  xml_calibration_parser.h
cyberglove/launch/: cyberglove.launch
cyberglove/src/: cyberglove_publisher.cpp  serial_glove.cpp
cyberglove/test/: test_calibration.cpp  test_calibration.test
cyberglove_trajectory/: CMakeLists.txt  README.md  package.xml  setup.py
cyberglove_trajectory/include/cyberglove_trajectory/: cyberglove_trajectory_publisher.h
cyberglove_trajectory/launch/: cyberglove.launch
cyberglove_trajectory/src/: cyberglove_mock.py  cyberglove_trajectory_node.cpp  cyberglove_trajectory_publisher.cpp
cyberglove_trajectory/src/cyberglove_trajectory/: cyberglove_mock.py
dev_branch/sr_remappers/: manifest.xml
logitech_r400/: CMakeLists.txt  README.md  package.xml  setup.py
logitech_r400/config/: config.yaml
logitech_r400/msg/: LogitechR400.msg
logitech_r400/src/logitech_r400/: logitech_r400
shuttle_xpress/: CMakeLists.txt  README.md  package.xml  setup.py
shuttle_xpress/msg/: ShuttleXpress.msg
shuttle_xpress/src/shuttle_xpress/: shuttle_xpress
sr_remappers/: CMakeLists.txt  README.md  package.xml
sr_remappers/include/sr_remappers/: shadowhand_to_cyberglove_remapper.h  shadowhand_to_cybergrasp_remapper.h
sr_remappers/launch/: remapper_glove.launch
sr_remappers/src/: calibration_parser.cpp  shadowhand_to_cyberglove_remapper.cpp  shadowhand_to_cybergrasp_remapper.cpp
