<?xml version="1.0"?>
<package>
  <name>cyberglove</name>
  <version>0.0.0</version>
  <description>This is a generic ROS interface to the Cyberglove from Immersion. It reads data from the Cyberglove, calibrate them and streams them to two different /joint_states topic: calibrated and raw data.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>sr_cyberglove_config</build_depend>
  <build_depend>cereal_port</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>sr_cyberglove_config</run_depend>
  <run_depend>cereal_port</run_depend>

</package>
