<?xml version="1.0"?>
<package>
  <name>logitech_r400</name>
  <version>0.0.0</version>
  <description>A driver for the Logitech R400.</description>
 <maintainer email="software@shadowrobot.com">Shadow Robot's Software Team</maintainer>
  <license>GPL</license>
  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <url type="repository">https://github.com/shadow-robot/sr-teleop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
